tokyotyrant.lisp


(cffi:defcfun ("tculogadbmisc" tculogadbmisc) :pointer
  (ulog :pointer)
  (sid :pointer)
  (adb :pointer)
  (name :string)
  (args :pointer))

(cffi:defcfun ("tculogadbrestore" tculogadbrestore) :pointer
  (adb :pointer)
  (path :string)
  (ts :pointer)
  (con :pointer)
  (ulog :pointer))

(cffi:defcfun ("tculogadbredo" tculogadbredo) :pointer
  (adb :pointer)
  (ptr :string)
  (size :int)
  (con :pointer)
  (ulog :pointer)
  (sid :pointer))

(cffi:defcfun ("tcreplnew" tcreplnew) :pointer)

(cffi:defcfun ("tcrepldel" tcrepldel) :void
  (repl :pointer))

(cffi:defcfun ("tcreplopen" tcreplopen) :pointer
  (repl :pointer)
  (host :string)
  (port :int)
  (ts :pointer)
  (sid :pointer))

(cffi:defcfun ("tcreplclose" tcreplclose) :pointer
  (repl :pointer))

(cffi:defcfun ("tcreplread" tcreplread) :string
  (repl :pointer)
  (sp :pointer)
  (tsp :pointer)
  (sidp :pointer))


